--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="content">
             <h2>Always Choose Good</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, soluta harum! Ut eligendi nostrum odit? Tempore, quis quae suscipit officia quasi corporis laborum ipsum rerum quam. Consectetur animi adipisci maxime!</p>
-            <a href="#" class="btn">Our menu</a>
+            <a href="#menu" class="btn">Our menu</a>
         </div>
     </section>
     <section class="about" id="about">
